# stock-tracker

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/stock_tracker/: __init__.py  __main__.py  constants.py  data.py  ml.py  option.py  threading.py  yahoo.py  yfinance.py
stock_tracker/: __init__.py  __main__.py  constants.py  data.py  flask.py  threading.py  types.py  yahoo.py
stock_tracker/templates/: base.html  index.html
