[metadata]
name = stock-tracker
version = 0.0.1
author = Oliver Nutter
author_email = mrnoname1000@riseup.net
description = A simple stock tracker
long_description = file: README.md
long_description_content_type = text/markdown
# TODO:
#url = https://github.com/pypa/sampleproject
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
#classifiers =
#    Programming Language :: Python :: 3
#    License :: OSI Approved :: MIT License
#    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
	pandas
	yfinance
	PyYaml
	appdirs
	tqdm
	yahoo_earnings_calendar @ https://github.com/mrnoname1000/yahoo-earnings-calendar/tarball/master
	ratelimit
	parsedatetime
python_requires = >=3.6

[options.entry_points]
console_scripts =
	stock-tracker = stock_tracker:main

[options.packages.find]
where = src
