[metadata]
name = stock-tracker
version = 0.0.1
author = Oliver Nutter
author_email = mrnoname1000@riseup.net
description = A simple stock tracker
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
install_requires =
	pandas
	yfinance
	PyYaml
	appdirs
	tqdm
	yahoo_earnings_calendar @ https://github.com/mrnoname1000/yahoo-earnings-calendar/tarball/master
	ratelimit
	parsedatetime
	flask

[options.entry_points]
console_scripts =
	stock-tracker = stock_tracker.__main__:main
